tests/baselines/reference/parser509630.errors.txt
parser509630.ts(3,1): error TS1137: Expression or comma expected.


==== parser509630.ts (1 errors) ====
    class Type {
        public examples = [ // typing here
    }
    ~
!!! error TS1137: Expression or comma expected.
    class Any extends Type {
    }
    